# Jimmy

./: .env.example  .env.production  .gitignore  API_ERRORS_FIXED.md  AUTHOR.md  BACKEND_DEPLOYMENT.md  BACKEND_READY_FOR_RENDER.md  BOT_ALWAYS_ON_PRODUCTION.md  CHANGELOG.md  COMPLETE_IMPLEMENTATION.md  COMPLETE_IMPLEMENTATION_CHECKLIST.md  CONTRIBUTING.md  CUSTOM_AGENTS_TOOLS_GUIDE.md  DASHBOARD_CONFIG.md  DASHBOARD_GITHUB_PAGES.md  DASHBOARD_QUICK_START.md  DASHBOARD_TROUBLESHOOTING.md  DASHBOARD_URL.md  DATABASE_700M_QUICKSTART.md  DATABASE_DELIVERY_SUMMARY.md  DATABASE_SETUP_COMPLETE.md  DELIVERY_SUMMARY.md  DEPLOYMENT_ACTION.txt  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_ENVIRONMENTS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_LIVE.md  DEPLOYMENT_READY.md  DEPLOYMENT_SEAMLESS.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_STATUS_SUMMARY.md  DEPLOY_ACTION_PLAN.md  DEPLOY_MANUALLY_5MIN.md  DEPLOY_NOW.md  DEPLOY_NOW_RENDER.md  DEPLOY_ONE_CLICK.md  DEPLOY_QUICK_START.md  DEPLOY_REALTIME_LIVE.md  DO_THIS_NOW.md  (+130 more)
.github/workflows/: ci-cd-production.yml  ci-cd.yml  code-quality.yml  deploy-dashboard.yml  deploy-to-render.yml  tests.yml
dashboard/: README.md  next.config.js  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/chat/: page.tsx
dashboard/app/components/: Navigation.tsx  SettingsPanel.tsx  VoiceConversation.tsx  analytics.tsx  messages.tsx  performance.tsx  users.tsx
dashboard/app/settings/: page.tsx
docker/: Dockerfile
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  INSTALLATION.md
scripts/: bulk_insert_700m.py  bulk_insert_sqlite_700m.py  create_700m_schema.sql  create_700m_sqlite_schema.sql  init_db.py  setup.sh
src/: __init__.py  config.py  db_init.py  main.py  schemas.py  utils.py
src/ai/: orchestrator.py
src/ai/agents/: custom.py
src/ai/tools/: custom.py  external.py
src/api/: __init__.py
src/api/routes/: __init__.py  (+10 more)
src/bot/: __init__.py
src/cache/: production_redis.py
src/database/: __init__.py  auto_migrate.py  large_scale_queries.py  models.py  sqlite_queries.py
src/memory/: manager.py  vector.py
src/monitoring/: db_monitor.py  health.py  logger.py  production_metrics.py
src/security/: auth.py  dependencies.py  validator.py
src/workflows/: scheduler.py
tests/: conftest.py
tests/integration/: __init__.py  test_api.py
tests/unit/: test_admin_settings.py  test_auth.py  test_database_url.py  test_memory.py
(+8 files in other folders)
