[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-bot-platform"
version = "1.0.0"
description = "Production-ready AI Bot Platform with WhatsApp and Telegram integration"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "AI Bot Team", email = "team@aibot.com"}
]

dependencies = [
    # FastAPI
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    
    # Database
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "alembic==1.12.1",
    
    # Async
    "httpx==0.25.1",
    "aioredis==2.0.1",
    "asyncpg==0.29.0",
    
    # AI/ML - Google AI Studio (Primary)
    "google-generativeai==0.3.0",
    
    # Optional AI Services
    "langchain==0.1.1",
    "langgraph==0.0.6",
    "openai==1.3.8",
    
    # WhatsApp QR Code Authentication
    "qrcode[pil]==7.4.2",
    "selenium==4.15.2",
    
    # Vector DB
    "chromadb==0.4.13",
    
    # Telegram
    "python-telegram-bot==20.3",
    
    # WhatsApp
    "twilio==8.10.0",
    
    # Redis
    "redis==5.0.1",
    
    # Security
    "pyjwt==2.8.1",
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]==3.3.0",
    "cryptography==41.0.7",
    
    # Validation
    "python-multipart==0.0.6",
    
    # Logging
    "python-json-logger==2.0.7",
    
    # Monitoring
    "prometheus-client==0.19.0",
    
    # PDF/Document
    "pypdf==3.17.1",
    "python-docx==0.8.11",
    "markdown==3.5.1",
    
    # Email
    "aiosmtplib==3.0.1",
    
    # Utilities
    "python-dotenv==1.0.0",
    "tenacity==8.2.3",
    "loguru==0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "black==23.12.0",
    "flake8==6.1.0",
    "isort==5.13.2",
    "mypy==1.7.1",
    "pre-commit==3.5.0",
]

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=html --cov-report=term-missing"
